--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html><title>Server on</title><body bgcolor="ffffff">
 welcome to myServer!
-<p>I'm extremely happy that you can see this page.
-<p><a href="cgi-bin/data_view?10">click here to view data</a>
+<p>I'm extremely happy that you can see this page.</p>
+<p><a href="cgi-bin/data_view?10">click here to view data</a></p>
 <hr><em>myServer powered by heyuyi</em>
 
